<resources>
    <string name="app_name">Abhawa Barta</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Today Update</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="current_label">Current</string>
    <string name="location">Minsk</string>
    <string name="update_string">Updating</string>
    <string name="wind_string">Wind</string>
    <string name="wind_speed_13">13 km/h</string>
    <string name="wind_humidity_24">24%</string>
    <string name="wind_chance_0f_24">87%</string>
    <string name="today">Today</string>
    <string name="next_7_days">7 days</string>
    <string name="tweenty_degree">22</string>
</resources>