<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nested_scroll_view"
    android:background="@color/black"
    android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:layout_weight="1"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:id="@+id/todayMaterialCard"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_mlarge"
            android:layout_marginEnd="@dimen/spacing_mlarge"
            app:cardBackgroundColor="#29B6F6"
            app:cardCornerRadius="30dp">
            
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_200"
                    android:layout_gravity="center"
                    app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:background="@drawable/text_view_border"
                        android:padding="8dp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:text="@string/update_string"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageView
                    android:padding="@dimen/dimen_20_dp"
                    android:layout_margin="@dimen/dimen_20_dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_shower_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextSwitcher
                    android:id="@+id/temp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr"
                    android:layout_gravity="center" />

                <TextSwitcher
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
                <TextSwitcher
                    android:id="@+id/date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <View
                    android:layout_marginLeft="@dimen/dimen_20_dp"
                    android:layout_marginRight="@dimen/dimen_20_dp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_border_height"/>

                <LinearLayout
                    android:layout_margin="@dimen/dimen_5_dp"
                    android:padding="@dimen/dimen_5_dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_shower_rain"
                            android:layout_width="@dimen/dimen_50_dp"
                            android:layout_height="@dimen/dimen_50_dp"/>

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/wind_speed_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textColor="@color/white"
                            android:text="@string/wind_string"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_shower_rain"
                            android:layout_width="@dimen/dimen_50_dp"
                            android:layout_height="@dimen/dimen_50_dp"/>

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/wind_speed_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textColor="@color/white"
                            android:text="@string/wind_string"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_shower_rain"
                            android:layout_width="@dimen/dimen_50_dp"
                            android:layout_height="@dimen/dimen_50_dp"/>

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:text="@string/wind_speed_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textColor="@color/white"
                            android:text="@string/wind_string"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginEnd="@dimen/spacing_mlarge"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp">


        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textSize="@dimen/dimen_font_26"
                android:textColor="@color/white"
                android:text="@string/today"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:background="@android:color/transparent"
                android:text="@string/next_7_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_today_update"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>



</LinearLayout>
